@@ -10,7 +10,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author 二哥很猛
@@ -45,7 +44,7 @@ public class CommonServiceImpl implements CommonService {
      * @return list
      */
     private List<SysAreaVO> treeBin(Long pid, List<SysAreaVO> voList) {
-        List<SysAreaVO> collectList = voList.stream().filter(parent -> pid.equals(parent.getPid())).collect(Collectors.toList());
+        List<SysAreaVO> collectList = voList.stream().filter(parent -> pid.equals(parent.getPid())).toList();
         collectList.forEach(parent -> parent.setChildren(this.treeBin(parent.getId(), voList)));
         return collectList;
     }
