@@ -23,7 +23,6 @@ import org.springframework.stereotype.Service;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author 二哥很猛
@@ -129,13 +128,13 @@ public class SysMenuServiceImpl implements SysMenuService {
     @Override
     public List<String> getPermCode(Long userId) {
         List<MenuResponse> menuList = sysMenuMapper.getMenuList(userId, 2);
-        return menuList.stream().map(MenuResponse::getCode).collect(Collectors.toList());
+        return menuList.stream().map(MenuResponse::getCode).toList();
     }
 
     @Override
     public List<String> getAdminPermCode() {
         List<MenuResponse> menuList = sysMenuMapper.getAdminMenuList(2);
-        return menuList.stream().map(MenuResponse::getCode).collect(Collectors.toList());
+        return menuList.stream().map(MenuResponse::getCode).toList();
     }
 
     /**
@@ -208,7 +207,7 @@ public class SysMenuServiceImpl implements SysMenuService {
      * @return 菜单列表 树状结构
      */
     private List<MenuResponse> treeBin(String pid, List<MenuResponse> menuList) {
-        List<MenuResponse> responseList = menuList.stream().filter(parent -> Objects.equals(pid, parent.getPid())).sorted(comparator).collect(Collectors.toList());
+        List<MenuResponse> responseList = menuList.stream().filter(parent -> Objects.equals(pid, parent.getPid())).sorted(comparator).toList();
         responseList.forEach(parent -> parent.setChildren(this.treeBin(parent.getId(), menuList)));
         return responseList;
     }
@@ -220,7 +219,7 @@ public class SysMenuServiceImpl implements SysMenuService {
      * @return 菜单列表 树状结构
      */
     private List<MenuFullResponse> treeBinB(String pid, List<MenuFullResponse> menuList) {
-        List<MenuFullResponse> responseList = menuList.stream().filter(parent -> Objects.equals(pid, parent.getPid())).sorted(fullComparator).collect(Collectors.toList());
+        List<MenuFullResponse> responseList = menuList.stream().filter(parent -> Objects.equals(pid, parent.getPid())).sorted(fullComparator).toList();
         responseList.forEach(parent -> parent.setChildren(this.treeBinB(parent.getId(), menuList)));
         return responseList;
     }
